2002-03-15  wakaba <w@suika.fam.cx>

	* Date.pm: New module.

2002-03-14  wakaba <w@suika.fam.cx>

	* Structured.pm, Unstructured.pm: New modules.

2002-03-13  wakaba <w@suika.fam.cx>

	* Address.pm: New module.
	
	* ChangeLog: New file.