@@ -1,3 +1,8 @@
+2002-03-16  wakaba <w@suika.fam.cx>
+
+	* Date.pm: Support ISO 8601 (full format), RFC 561/724 
+	(slash format).
+
 2002-03-15  wakaba <w@suika.fam.cx>
 
 	* Date.pm: New module.
